Fixed image overflow on small screens

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -193,5 +193,15 @@ footer {
 	background: scale-color($secondary-color, $lightness: 60%);
 }
 
+// Fixes image overflow on small screens
+@media #{$small-only} {
+	.sidebar {
+		img.smoke {
+			width: 100% !important;
+			max-width: 100% !important;
+		}
+	}
+}
+
 @include motion-ui-transitions;
 @include foundation-everything;
